<resources>
    <string name="app_name">Meus Contatos</string>
    <string name="action_settings">Settings</string>
    <string name="img_content_description" />
    <string name="nome_requerido">Campo nome obrigatório!</string>
    <string name="sobrenome_requerido">Campo SobreNome obrigatório!</string>
    <string name="password_required">Campo senha obrigatório!</string>
    <string name="hint_nome">Nome</string>
    <string name="hint_sobrenome">Sobrenome</string>
    <string name="hint_senha">Senha</string>
    <string name="hint_email">E-mail</string>
    <string name="label_nome">Nome:</string>
    <string name="label_sobrenome">SobreNome:</string>
    <string name="label_telefone">Telefone:</string>
    <string name="label_email">Email:</string>
    <string name="label_senha">Senha:</string>
    <string name="label_registrar">REGISTRAR</string>
    <string name="label_cancelar">CANCELAR</string>
    <string name="label_entrar">ENTRAR</string>
    <string name="label_conf_senha">Confirme a Senha:</string>
    <string name="btn_enter_value">Registrar</string>
    <string name="login_auth_ok">Senha Ok!</string>
    <string name="login_user_size_invalid">Seu login deve ter entre 6 e 15 caracteres!</string>
    <string name="login_pass_size_invalid">Sua senha deve ter entre 6 e 15 caracteres!</string>
    <string name="label_salvar">SALVAR</string>
    <string name="hint_telefone">Telefone</string>
    <string name="id_facebook">932943306832209</string>
    <string name="auth_failed">Erro ao autenticar</string>

    <string name="bluetooth_dashboard">Bluetooth Dashboard</string>
    <string name="ativar_bluetooth">Ativar Bluetooth</string>
    <string name="buscar_devices">Buscar Devices</string>
    <string name="ficar_visivel">Ficar Visível</string>
    <string name="iniciar_servidor">Iniciar Servidor</string>
    <string name="error_login">Login ou senha invaldos</string>
    <string name="api_key_maps">AIzaSyA1Tk14PfJILfvg3pQE034dyA6KLjoXea4</string>
</resources>

