<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="br.com.meuscontatos.principal.SignUpActivity">
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/label_nome"
        android:inputType="textPersonName"
        android:id="@+id/formulario_nome"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/label_sobrenome"
        android:inputType="textPersonName"
        android:id="@+id/formulario_sobrenome"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/label_telefone"
        android:inputType="phone"
        android:id="@+id/formulario_telefone"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/label_email"
        android:inputType="textEmailAddress"
        android:id="@+id/formulario_email"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/label_senha"
        android:id="@+id/formulario_senha"
        android:singleLine="true"
        android:maxLength="15"
        android:inputType="textPassword"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/label_conf_senha"
        android:id="@+id/formulario_conf_senha"
        android:singleLine="true"
        android:maxLength="15"
        android:inputType="textPassword" />

</LinearLayout>
